# Morphometric-Analysis-Toolbox-for-Segmentation

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  leaf_morphoV9.2_peduncle.py  pyproject.toml
.github/workflows/: ci.yml
deploy/ondemand/mats/: README.md  form.yml  manifest.yml  submit.yml.erb  view.html.erb
deploy/ondemand/mats/template/: script.sh.erb
docs/: cli.md  gui.md  hpc.md  templates.md  weights.md
examples/sample_images/: README.md
src/mats/: __init__.py  cli.py  core.py  dimensions.py  paths.py  weights.py
src/mats/app/: Home.py  __init__.py  launcher.py
src/mats/app/pages/: 1_Template_Creator.py
tests/: test_cli_args.py  test_dimensions.py  test_paths.py  test_weights.py
weights/: birefnet_leaf.pth  rf_detr_marker.pth
